--- a/requirements.txt
+++ b/requirements.txt
@@ -5,21 +5,30 @@ annotated-types==0.7.0
 anyio==4.8.0
 appnope==0.1.4
 asttokens==2.4.1
+async-timeout==4.0.3
 attrs==25.1.0
 cachetools==5.5.2
 certifi==2025.1.31
 charset-normalizer==3.4.1
+colorama==0.4.6
 comm==0.2.2
-contourpy==1.3.1
+contourpy==1.3.0
 cycler==0.12.1
 dataclasses-json==0.6.7
 debugpy==1.8.1
 decorator==5.1.1
 distro==1.9.0
+dotenv==0.9.9
+exceptiongroup==1.2.2
 executing==2.0.1
 filetype==1.2.0
 fonttools==4.56.0
 frozenlist==1.5.0
+google-ai-generativelanguage==0.6.17
+google-api-core==2.24.2
+google-auth==2.38.0
+googleapis-common-protos==1.69.2
+greenlet==3.1.1
 grpcio==1.71.0rc2
 grpcio-status==1.71.0rc2
 h11==0.14.0
@@ -28,8 +37,9 @@ httplib2==0.22.0
 httpx==0.28.1
 httpx-sse==0.4.0
 idna==3.10
-ipykernel==6.29.4
-ipython==8.25.0
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
+ipython==8.18.1
 jedi==0.19.1
 Jinja2==3.1.6
 jiter==0.8.2
@@ -39,16 +49,17 @@ jsonpointer==3.0.0
 jupyter_client==8.6.2
 jupyter_core==5.7.2
 kagglehub==0.3.10
-kiwisolver==1.4.8
-langchain==0.3.19
-langchain-community==0.3.18
-langchain-core==0.3.40
+kiwisolver==1.4.7
+langchain==0.3.21
+langchain-community==0.3.20
+langchain-core==0.3.48
+langchain-google-genai==2.0.11
 langchain-openai==0.3.7
-langchain-text-splitters==0.3.6
+langchain-text-splitters==0.3.7
 langsmith==0.3.11
 MarkupSafe==3.0.2
 marshmallow==3.26.1
-matplotlib==3.10.1
+matplotlib==3.9.4
 matplotlib-inline==0.1.7
 multidict==6.1.0
 mypy-extensions==1.0.0
@@ -63,7 +74,7 @@ pexpect==4.9.0
 pillow==11.1.0
 pinecone==6.0.1
 pinecone-plugin-interface==0.0.7
-platformdirs==4.2.2
+platformdirs==4.3.7
 prompt_toolkit==3.0.47
 propcache==0.3.0
 proto-plus==1.26.0
@@ -81,6 +92,7 @@ pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2025.1
+pywin32==310
 PyYAML==6.0.2
 pyzmq==26.0.3
 regex==2024.11.6
@@ -88,7 +100,7 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rsa==4.9
 scikit-learn==1.6.1
-scipy==1.15.2
+scipy==1.13.1
 six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.38
@@ -106,4 +118,5 @@ uritemplate==4.1.1
 urllib3==2.3.0
 wcwidth==0.2.13
 yarl==1.18.3
+zipp==3.21.0
 zstandard==0.23.0
